--- a/slides/01-model.Rmd
+++ b/slides/01-model.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Predictive Modeling"
+title: "Build a model"
 subtitle: "Tidymodels, Virtually"
 session: 01
 author: Alison Hill
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(comment = ">",
                       collapse = TRUE,
                       fig.retina = 3,
                       fig.align = 'center',
-                      fig.path = "figs/01-predicting/",
+                      fig.path = "figs/01-model/",
                       R.options = list(tibble.max_extra_cols=5, 
                                        tibble.print_max=5, 
                                        tibble.width=60))
