--- a/slides/02-recipes.Rmd
+++ b/slides/02-recipes.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(comment = ">",
                       collapse = TRUE,
                       fig.retina = 3,
                       fig.align = 'center',
-                      fig.path = "figs/01-predicting/",
+                      fig.path = "figs/02-recipes/",
                       R.options = list(tibble.max_extra_cols=5, 
                                        tibble.print_max=5, 
                                        tibble.width=60))
