--- a/slides/01-model.Rmd
+++ b/slides/01-model.Rmd
@@ -684,7 +684,7 @@ data `(y)` + predictions = metrics
 ---
 class: middle, center, inverse
 
-# A model doesn't have to be a straight line!
+# A model doesn't have to be a straight&nbsp;line!
 
 ---
 exclude: true
