--- a/slides/03-recipes.Rmd
+++ b/slides/03-recipes.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Preprocess your data"
+title: "Preprocess Your Data"
 subtitle: "Tidymodels, Virtually"
-session: 02
+session: 03
 author: Alison Hill
 date: "`r Sys.Date()`"
 output:
@@ -79,7 +79,7 @@ class: title-slide, center, bottom
 
 # `r rmarkdown::metadata$title`
 
-## `r rmarkdown::metadata$subtitle`: `r rmarkdown::metadata$session`
+## `r rmarkdown::metadata$subtitle` &mdash; Session `r stringr::str_pad(rmarkdown::metadata$session, 2, pad = "0")`
 
 ### `r rmarkdown::metadata$author` 
 
