--- a/slides/04-ensemble.Rmd
+++ b/slides/04-ensemble.Rmd
@@ -138,7 +138,7 @@ class: title-slide, center, bottom
 
 # `r rmarkdown::metadata$title`
 
-## `r rmarkdown::metadata$subtitle`: `r rmarkdown::metadata$session`
+## `r rmarkdown::metadata$subtitle` &mdash; Session `r stringr::str_pad(rmarkdown::metadata$session, 2, pad = "0")`
 
 ### `r rmarkdown::metadata$author` 
 
