--- a/materials/exercises/04-Ensembling.Rmd
+++ b/materials/exercises/04-Ensembling.Rmd
@@ -1,19 +1,13 @@
 ---
-title: "04-Ensembling"
+title: "04-ensembling"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 library(tidyverse)
 library(tidymodels)
-library(tune)
 
 source(here::here("materials/exercises/04-helpers.R"))
-
-fit_split <- function(formula, model, split, ...) {
-  wf <- workflows::add_model(workflows::add_formula(workflows::workflow(), formula, blueprint = hardhat::default_formula_blueprint(indicators = FALSE)), model)
-  tune::last_fit(wf, split, ...)
-}
 
 get_tree_fit <- function(results) {
   results %>% 
@@ -22,13 +16,15 @@ get_tree_fit <- function(results) {
 }
 
 # read in the data
-stackoverflow <- read_rds(here::here("materials/data/stackoverflow.rds"))
+stackoverflow <- read_rds(here::here("materials/data/stackoverflow.rds")) %>% 
+  select(-country)
 
 # split the data
 set.seed(100) # Important!
 so_split <- initial_split(stackoverflow, strata = remote)
 so_train <- training(so_split)
 so_test  <- testing(so_split)
+so_folds <- vfold_cv(so_train, strata = remote)
 ```
 
 # Your turn 1
@@ -42,9 +38,9 @@ vanilla_tree_spec <-
   set_mode("classification")
 
 set.seed(100) # Important!
-_________(remote ~ ., 
-          model = ________, 
-          split = so_split) %>% 
+_________ %>% 
+  _________(remote ~ ., 
+            resamples = so_folds) %>% 
   _________
 ```
 
