--- a/materials/solutions/04-Ensembling.Rmd
+++ b/materials/solutions/04-Ensembling.Rmd
@@ -16,8 +16,7 @@ get_tree_fit <- function(results) {
 }
 
 # read in the data
-stackoverflow <- read_rds(here::here("materials/data/stackoverflow.rds")) %>% 
-  select(-country)
+stackoverflow <- read_rds(here::here("materials/data/stackoverflow.rds"))
 
 # split the data
 set.seed(100) # Important!
