--- a/materials/handouts/04-ensembling-handout.Rmd
+++ b/materials/handouts/04-ensembling-handout.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Ensembling"
-author: "Handout 4 of Introduction to Machine Learning"
-date: "January 2020"
+title: "Ensembling Handout"
+author: "Introduction to Machine Learning"
+date: "April 2020"
 output:
   pdf_document: default
   html_document:
@@ -21,60 +21,10 @@ set.seed(100) # Important!
 so_split <- initial_split(stackoverflow, strata = remote)
 so_train <- training(so_split)
 so_test  <- testing(so_split)
+
+source(here::here("materials/exercises/04-helpers.R"))
 ```
 
-```{r bootstrap-tree, include=FALSE}
-get_boot_trees <- function(seed = 1, tree_depth = 4) {
-  # Make recipe
-  so_rec <- 
-    recipe(remote ~ ., 
-           data = stackoverflow) 
-  
-  # Make learner
-  tmp_tree_lnr <-
-    decision_tree(tree_depth = tree_depth) %>%         
-    set_engine("rpart", model = TRUE) %>%      
-    set_mode("classification")
-  
-  # Make workflow
-  temp_flow <- 
-    workflow() %>% 
-    add_model(tmp_tree_lnr) %>% 
-    add_recipe(so_rec) 
-  
-  # Begin resampling
-  set.seed(seed)
-  so_boots <- so_train %>% 
-    bootstraps(times = 1) %>% 
-    pluck("splits", 1)
-  
-  boot_fit <- temp_flow %>% 
-    fit(data = analysis(so_boots)) %>% 
-    pull_workflow_fit() %>% 
-    pluck("fit")
-  
-  boot_fit
-}
-```
-
-```{r bootstrap-predict, include=FALSE}
-get_boot_votes <- function(seed = 1, team = 1) {
-  tree <- get_boot_trees(seed)
-  set.seed(seed * team)
-  start <- sample((nrow(so_test)/2 - 4), 1)
-  mini_test <- so_test %>% 
-    mutate(obs = row_number()) %>%  
-    group_by(remote) %>% 
-    slice(start:(start + 4))
-  preds <- 
-    tree %>% 
-    predict(mini_test, type = "class") %>% 
-    enframe(name = "row_num", value = "estimate") %>% 
-    bind_cols(select(mini_test, truth = remote, obs)) %>% 
-    select(obs, truth, estimate)
-  preds
-}
-```
 
 We'll assign each team a number. Your team number determines which ten observations from the testing set you'll predict (Round 1) and vote on (Round 2).
 
