add links to intro slides

--- a/slides/00-intro.Rmd
+++ b/slides/00-intro.Rmd
@@ -38,11 +38,7 @@ class: title-slide, center, bottom
 ### `r rmarkdown::metadata$author` 
 
 
----
-name: clouds
-class: center, middle
-background-image: url(images/Clouds.jpg)
-background-size: cover
+
 
 ```{r meta, echo=FALSE}
 library(metathis)
@@ -62,6 +58,37 @@ meta() %>%
   )
 ```
 
+
+
+---
+name: clouds2
+background-image: url(images/Clouds2.jpg)
+background-size: cover
+
+---
+template: clouds2
+class: middle, center
+
+.pull-left[
+# <i class="fas fa-cloud"></i>
+
+https://bit.ly/tmv-chop-cloud
+]
+
+.pull-right[
+
+# <i class="fab fa-google"></i>
+
+https://bit.ly/tmv-chop
+
+]
+
+---
+name: clouds
+class: center, middle
+background-image: url(images/Clouds.jpg)
+background-size: cover
+
 ---
 template: clouds
 
@@ -72,12 +99,7 @@ template: clouds
 Hello- I'm so happy you could join us today. 
 
 ---
-name: clouds2
-background-image: url(images/Clouds2.jpg)
-background-size: cover
-
----
-template: clouds2
+template: clouds
 class: middle, center
 
 
@@ -421,9 +443,11 @@ class: frame, middle, center
 ---
 class: frame, middle, center
 
-# Our Google Doc
+# Our classroom
 
-https://bit.ly/tmv-chop
+Google Doc: https://bit.ly/tmv-chop
+
+RStudio Cloud: https://bit.ly/tmv-chop-cloud
 
 
 ---
