remove sci notation on cloud

--- a/materials/exercises/02-resample.Rmd
+++ b/materials/exercises/02-resample.Rmd
@@ -4,6 +4,7 @@ output: html_document
 ---
 
 ```{r setup, include=FALSE}
+options(scipen = 999)
 library(tidyverse)
 library(AmesHousing)
 library(tidymodels)
